--- a/css/main.css
+++ b/css/main.css
@@ -12533,6 +12533,9 @@ body {
 .footer {
   background-color: var(--bs-secondary-background);
 }
+.footer .widget {
+  margin: 0;
+}
 
 .footer-row {
   display: flex;
@@ -12806,17 +12809,20 @@ body {
 }
 .shop-container .row .shop-sidebar-container .shop-sidebar-content h3, .shop-container .row .shop-sidebar-container .shop-sidebar-content .h3 {
   color: var(--bs-darker-text);
+  font-size: 23px;
   font-weight: bold;
   text-align: left;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
 }
 .shop-container .row .shop-sidebar-container .shop-sidebar-content p {
   color: var(--bs-darker-text);
+  font-size: 17px;
 }
 .shop-container .row .shop-sidebar-container .shop-sidebar-content .btn-primary {
   border: 1px solid var(--bs-primary);
   background-color: transparent;
   color: var(--bs-primary);
+  font-size: 17px;
 }
 .shop-container .row .shop-sidebar-container .shop-sidebar-content .btn-primary .bi-download {
   margin-right: 10px;
@@ -12828,9 +12834,10 @@ body {
 }
 .shop-container .row .shop-sidebar-container .shop-sidebar-content .woocommerce-loop-category__title {
   display: flex;
-  text-align: left;
-  justify-content: flex-start;
+  text-align: center;
+  justify-content: center;
   font-weight: normal;
+  font-size: 17px;
   color: var(--bs-dark-brown);
 }
 .shop-container .row .shop-sidebar-container .shop-sidebar-content .woocommerce-loop-category__title:hover {
@@ -12840,6 +12847,9 @@ body {
 }
 .shop-container .row .shop-sidebar-container .shop-sidebar-content .woocommerce-loop-category__title .count {
   display: none;
+}
+.shop-container .row .shop-content-container {
+  padding: 0 30px;
 }
 .shop-container .row .shop-filter-search-container {
   width: 100%;
@@ -12870,17 +12880,20 @@ body {
 }
 .shop-taxonomy-product-cat-container .row .shop-sidebar-container .shop-sidebar-content h3, .shop-taxonomy-product-cat-container .row .shop-sidebar-container .shop-sidebar-content .h3 {
   color: var(--bs-darker-text);
+  font-size: 23px;
   font-weight: bold;
   text-align: left;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
 }
 .shop-taxonomy-product-cat-container .row .shop-sidebar-container .shop-sidebar-content p {
   color: var(--bs-darker-text);
+  font-size: 17px;
 }
 .shop-taxonomy-product-cat-container .row .shop-sidebar-container .shop-sidebar-content .btn-primary {
   border: 1px solid var(--bs-primary);
   background-color: transparent;
   color: var(--bs-primary);
+  font-size: 17px;
 }
 .shop-taxonomy-product-cat-container .row .shop-sidebar-container .shop-sidebar-content .btn-primary .bi-download {
   margin-right: 10px;
@@ -12891,11 +12904,11 @@ body {
   margin: 10px 2px 10px 0;
 }
 .shop-taxonomy-product-cat-container .row .shop-sidebar-container .shop-sidebar-content .woocommerce-loop-category__title {
-  border-radius: 25px;
   display: flex;
-  text-align: left;
-  justify-content: flex-start;
+  text-align: center;
+  justify-content: center;
   font-weight: normal;
+  font-size: 17px;
   color: var(--bs-dark-brown);
 }
 .shop-taxonomy-product-cat-container .row .shop-sidebar-container .shop-sidebar-content .woocommerce-loop-category__title:hover {
@@ -12906,11 +12919,11 @@ body {
 .shop-taxonomy-product-cat-container .row .shop-sidebar-container .shop-sidebar-content .woocommerce-loop-category__title .count {
   display: none;
 }
-.shop-taxonomy-product-cat-container .shop-filter-search-container {
+.shop-taxonomy-product-cat-container .row .shop-filter-search-container {
   width: 100%;
   margin-bottom: 30px;
 }
-.shop-taxonomy-product-cat-container .shop-filter-search-container .shop-search .aws-container {
+.shop-taxonomy-product-cat-container .row .shop-filter-search-container .shop-search .aws-container {
   width: 60%;
 }
 
@@ -12958,6 +12971,7 @@ body {
 /****************** CUSTOM CAKE - FORM HEADER ******************/
 .custom-cake-form-header-component {
   background-color: var(--bs-primary-background);
+  margin-top: 30px;
 }
 .custom-cake-form-header-component .custom-cake-form-header-text-container {
   width: 75%;
