Adjusting the Single Product page

--- a/css/main.css
+++ b/css/main.css
@@ -12082,6 +12082,10 @@ body {
   padding: 0 !important;
 }
 
+.pswp__caption {
+  display: none;
+}
+
 /****************** HEADER ******************/
 .header-row {
   padding: 0 !important;
@@ -12090,7 +12094,7 @@ body {
 .header {
   background-color: var(--bs-dark-green);
   position: fixed;
-  z-index: 3;
+  z-index: 10;
 }
 .header .image-container {
   background-size: contain;
@@ -12918,6 +12922,9 @@ body {
 }
 .shop-taxonomy-product-cat-container .row .shop-sidebar-container .shop-sidebar-content .woocommerce-loop-category__title .count {
   display: none;
+}
+.shop-taxonomy-product-cat-container .row .shop-content-container {
+  padding: 0 30px;
 }
 .shop-taxonomy-product-cat-container .row .shop-filter-search-container {
   width: 100%;
