--- a/css/woocommerce/woocommerce.scss
+++ b/css/woocommerce/woocommerce.scss
@@ -151,15 +151,16 @@ p.demo_store,
 		}
 
 		p.stock {
-			font-size: 0.92em;
+			font-size: 1.05em;
+			font-weight: bold;
 		}
 
 		.stock {
-			color: $highlight;
+			color: #7a603a;
 		}
 
 		.out-of-stock {
-			color: red;
+			color: #B23A1E;
 		}
 
 		.woocommerce-product-rating {
@@ -174,6 +175,7 @@ p.demo_store,
 				width: 100%;
 				height: auto;
 				box-shadow: none;
+				padding: 4px;
 			}
 
 			div.thumbnails {
