--- a/style.css
+++ b/style.css
@@ -238,6 +238,7 @@ button,
 [type="button"],
 [type="reset"],
 [type="submit"] {
+	appearance: button;
 	-webkit-appearance: button;
 }
 
@@ -321,6 +322,7 @@ textarea {
  * 2. Correct the outline style in Safari.
  */
 [type="search"] {
+	appearance: textfield;
 	-webkit-appearance: textfield;
 	outline-offset: -2px;
 }
