--- a/css/main.css
+++ b/css/main.css
@@ -12803,6 +12803,14 @@ body {
     }
 } */
 /****************** SHOP ******************/
+#cart {
+  padding-top: 100px;
+}
+
+#checkout {
+  padding-top: 100px;
+}
+
 .shop-container {
   background-color: var(--bs-primary-background);
   /****************** SHOP - CHECKOUT ******************/
@@ -12939,6 +12947,9 @@ body {
 /****************** SHOP - SINGLE PRODUCT ******************/
 .single-product-container {
   padding-top: 100px;
+  /* span.onsale {
+      display: none;
+  } */
 }
 .single-product-container .woocommerce-breadcrumb a {
   color: var(--bs-primary) !important;
