--- a/css/woocommerce/woocommerce.css
+++ b/css/woocommerce/woocommerce.css
@@ -616,23 +616,20 @@ p.demo_store a,
   transform: scale(1.5, 1.5);
 }
 .woocommerce span.onsale {
-  display: none;
-  /* min-height: 3.236em;
+  height: 22px;
   min-width: 3.236em;
   padding: 0.202em;
-  font-size: 1em;
-  font-weight: 700;
+  font-size: 18px !important;
+  font-weight: 600;
   position: absolute;
   text-align: center;
-  line-height: 3.236;
+  line-height: 16px;
   top: -0.5em;
   left: -0.5em;
   margin: 0;
-  border-radius: 100%;
-  background-color: $highlight;
-  color: $highlightext;
-  font-size: 0.857em;
-  z-index: 2; */
+  background-color: #B23A1E;
+  color: #F2F2F0;
+  z-index: 2;
 }
 .woocommerce .products ul,
 .woocommerce ul.products {
@@ -662,8 +659,7 @@ p.demo_store a,
   box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.1490196078);
 }
 .woocommerce ul.products li.product .onsale {
-  top: 0;
-  right: 0;
+  top: 20px;
   left: auto;
   margin: -0.5em -0.5em 0 0;
 }
