--- a/css/woocommerce/woocommerce.scss
+++ b/css/woocommerce/woocommerce.scss
@@ -527,23 +527,20 @@ p.demo_store,
 	}
 
 	span.onsale {
-		display: none;
-		/* min-height: 3.236em;
+		height: 22px;
 		min-width: 3.236em;
 		padding: 0.202em;
-		font-size: 1em;
-		font-weight: 700;
+		font-size: 18px!important;
+		font-weight: 600;
 		position: absolute;
 		text-align: center;
-		line-height: 3.236;
+		line-height: 16px;
 		top: -0.5em;
 		left: -0.5em;
 		margin: 0;
-		border-radius: 100%;
-		background-color: $highlight;
-		color: $highlightext;
-		font-size: 0.857em;
-		z-index: 2; */
+		background-color: #B23A1E;
+		color: #F2F2F0;
+		z-index: 2;
 	}
 
 	/**
@@ -569,8 +566,7 @@ p.demo_store,
 		box-shadow: 0px 8px 24px #00000026;
 
 		.onsale {
-			top: 0;
-			right: 0;
+			top: 20px;
 			left: auto;
 			margin: -0.5em -0.5em 0 0;
 		}
