--- a/css/main.scss
+++ b/css/main.scss
@@ -114,6 +114,15 @@ body {
                     }
                 }
             }
+
+            .current-menu-item {
+                a {
+                    font-size: 18px;
+                    letter-spacing: 0px;
+                    color: var(--bs-primary);
+                    text-decoration: none;
+                }
+            }
         }
     }
 
@@ -358,14 +367,14 @@ body {
 
 /****************** HOME - HERO ******************/
 
-.home-hero-component{
+.big-hero-component{
     position: relative;
     min-height: 750px;
     background-color: var(--bs-primary-background);
     padding-top: 100px;
     padding-bottom: 50px;
 
-    .home-hero-content-container{
+    .big-hero-content-container{
         z-index: 1;
         width: 100%;
 
@@ -389,10 +398,13 @@ body {
 
     .bg-image-container{
         width: 100%;
+        height: 100%;
         position: absolute;
     
         img {
             width: 100%;
+            height: auto;
+            object-fit: cover;
             filter: brightness(50%);
         }
     }
@@ -400,7 +412,7 @@ body {
 
 /****************** PRIMARY BLOCK ******************/
 
-.primary-block-container {
+.primary-block-component {
     background-color: var(--bs-primary-background);
     margin: 60px 0;
 
@@ -668,6 +680,15 @@ body {
             filter: brightness(90%);
         }
     }
+
+    .map-container{
+        background-color: var(--bs-dark-green);
+        padding: 0;
+
+        iframe {
+            filter: brightness(90%);
+        }
+    }
 }
 
 /****************** HOME - INSTAGRAM FEED ******************/
@@ -763,7 +784,16 @@ body {
                     }
                 }
             }
-        }       
+        }
+        
+        .current-menu-item {
+            a {
+                font-size: 18px;
+                letter-spacing: 0px;
+                color: var(--bs-primary);
+                text-decoration: none;
+            }
+        }
     }
 
     .some-links {
@@ -1656,6 +1686,275 @@ body {
                 font-weight: bold;
                 margin-bottom: 25px;
             }
+        }
+    }
+}
+
+/****************** RESPONSIVNESS ******************/
+
+@media (max-width: 1199.98px) {
+    .header .image-container {
+        width: 85%;
+    }
+
+    .primary-block-component {
+
+        .row {
+            justify-content: center!important;
+
+            .primary-block-image {
+                margin-bottom: 25px;
+            }
+
+            .primary-block-text-container {
+                width: 85%;
+
+                h2 {
+                    font-size: 30px;
+                }
+            }
+        }
+    }
+
+    .shop-introduction-component {
+        .shop-introduction-container {
+            width: 70%;
+        }
+    }
+
+    .testimonials-component {
+        .testimonials-container {
+            width: 75%;
+        }
+
+        .card-body {
+            padding: 0 10px!important;
+        }
+    }
+
+    .feed-component {
+        .feed-container {
+            width: 75%;
+        }
+    }
+}
+
+@media (max-width: 991.98px) {
+    .header .image-container {
+        width: 60%;
+    }
+
+    .big-hero-component {
+        .big-hero-content-container {
+
+            h1 {
+                font-size: 45px;
+                width: 100%;
+            }
+
+            p {
+                width: 95%;
+            }
+        }
+    }
+
+    .primary-block-component {
+
+        .row {
+
+            .primary-block-text-container {
+                width: 100%;
+
+                h2 {
+                    font-size: 30px;
+                }
+            }
+        }
+    }
+
+    .testimonials-component {
+        .card-body {
+            padding: 30px!important;
+        }
+    }
+
+    .address-contact-component {
+        .address-contact-container {
+            padding: 75px 0;
+        }
+    }
+
+    .feed-component {
+        .feed-container {
+            width: 80%;
+        }
+    }
+}
+
+@media (max-width: 767.98px) {
+    .header .image-container {
+        width: 80%;
+    }
+
+    .promotion-banner-component {
+        background-color: var(--bs-dark-green);
+
+        h2 {
+            font-size: 30px;
+        }
+
+        .btn-primary {
+            font-size: 15px;
+        }
+    }
+
+    .shop-introduction-component {
+        .shop-introduction-container {
+            width: 90%;
+        }
+    }
+
+    .testimonials-component {
+        .testimonials-container {
+            width: 90%;
+
+            h2 {
+                font-size: 30px;
+            }
+        }
+    }
+
+    .feed-component {
+        .feed-container {
+            width: 100%;
+        }
+    }
+
+    .footer {
+        .footer-menu-row {
+            flex-direction: column;
+        }
+
+        h4 {
+            font-size: 30px;
+        }
+
+        .quicklinks-container{
+
+            .menu {
+                display: flex;
+                flex-wrap: wrap;
+
+                li {
+                    margin: 25px 15px;
+
+                    a {
+                        font-size: 25px;
+                    }
+                }
+            }
+        }
+
+        .address-contact-container {
+            margin: 40px 0;
+        }
+
+        .opening-hours-container {
+            justify-content: flex-start!important;
+        }
+
+        .some-links-container{
+            margin-top: 40px;
+            justify-content: flex-start!important;
+        }
+
+        p {
+            font-size: 25px;
+        }
+    }
+}
+
+@media (max-width: 550px) {
+    .header .image-container {
+        width: 90%;
+    }
+
+    .shop-introduction-component {
+        .shop-introduction-container {
+            width: 95%;
+        }
+    }
+
+    .testimonials-component {
+        .testimonials-container {
+
+            h2 {
+                font-size: 25px;
+            }
+        }
+    }
+
+    .address-contact-component {
+        .address-contact-text-container {
+            
+            p {
+                font-size: 16px;
+            }
+        }
+    }
+}
+
+@media (max-width: 450px) {
+    .header .image-container {
+        width: 100%;
+    }
+
+    .shop-introduction-component {
+        .shop-introduction-container {
+            h2 {
+                font-size: 30px;
+            }
+
+            p {
+                font-size: 16px;
+            }
+        }
+    }
+
+    .promotion-banner-component {
+        background-color: var(--bs-dark-green);
+
+        h2 {
+            font-size: 23px;
+        }
+
+        .btn-primary {
+            font-size: 15px;
+        }
+    }
+
+
+    .testimonials-component {
+        .testimonials-container {
+            width: 100%;
+
+            h2 {
+                font-size: 25px;
+            }
+        }
+    }
+
+    .address-contact-component {
+        .address-contact-text-container {        
+            p {
+                line-height: 30px;
+            }
+        }
+    }
+
+    .feed-component {
+        p {
+            font-size: 15px;
         }
     }
 }
