--- a/css/main.css
+++ b/css/main.css
@@ -12027,6 +12027,7 @@ textarea.form-control-lg {
 h1, .h1 {
   font-size: 54px;
   text-align: left;
+  font-weight: 600;
   letter-spacing: 0px;
 }
 
@@ -12392,12 +12393,16 @@ body {
 }
 .promotion-banner-component .bg-image-container {
   width: 100%;
+  height: 100%;
   position: absolute;
   transform-origin: top center;
   transform: scale(1);
 }
 .promotion-banner-component .bg-image-container img {
   width: 100%;
+  height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
   filter: brightness(60%);
 }
 
@@ -13439,9 +13444,6 @@ body {
   .header .image-container {
     width: 80%;
   }
-  .promotion-banner-component {
-    background-color: var(--bs-dark-green);
-  }
   .promotion-banner-component h2, .promotion-banner-component .h2 {
     font-size: 30px;
   }
@@ -13494,6 +13496,19 @@ body {
   .header .image-container {
     width: 90%;
   }
+  .big-hero-component .big-hero-content-container h1, .big-hero-component .big-hero-content-container .h1 {
+    font-size: 36px;
+  }
+  .big-hero-component .big-hero-content-container p {
+    width: 95%;
+  }
+  .big-hero-component .big-hero-buttons-container .btn-primary {
+    font-size: 15px;
+    padding: 10px 15px;
+  }
+  .big-hero-component .big-hero-buttons-container .btn-link {
+    font-size: 16px;
+  }
   .shop-introduction-component .shop-introduction-container {
     width: 95%;
   }
@@ -13508,14 +13523,25 @@ body {
   .header .image-container {
     width: 100%;
   }
+  .big-hero-component .big-hero-content-container h1, .big-hero-component .big-hero-content-container .h1 {
+    font-size: 28px;
+  }
+  .big-hero-component .big-hero-content-container p {
+    font-size: 16px;
+    width: 100%;
+  }
+  .big-hero-component .big-hero-buttons-container .btn-primary {
+    font-size: 13px;
+    padding: 10px 15px;
+  }
+  .big-hero-component .big-hero-buttons-container .btn-link {
+    font-size: 14px;
+  }
   .shop-introduction-component .shop-introduction-container h2, .shop-introduction-component .shop-introduction-container .h2 {
     font-size: 30px;
   }
   .shop-introduction-component .shop-introduction-container p {
     font-size: 16px;
-  }
-  .promotion-banner-component {
-    background-color: var(--bs-dark-green);
   }
   .promotion-banner-component h2, .promotion-banner-component .h2 {
     font-size: 23px;
