--- a/css/main.scss
+++ b/css/main.scss
@@ -467,12 +467,15 @@ body {
 
     .bg-image-container{
         width: 100%;
+        height: 100%;
         position: absolute;
         transform-origin: top center;
         transform: scale(1.0);
     
         img {
             width: 100%;
+            height: auto;
+            object-fit: cover;
             filter: brightness(60%);
         }
     }
@@ -1698,7 +1701,6 @@ body {
     }
 
     .primary-block-component {
-
         .row {
             justify-content: center!important;
 
@@ -1759,9 +1761,7 @@ body {
     }
 
     .primary-block-component {
-
         .row {
-
             .primary-block-text-container {
                 width: 100%;
 
@@ -1797,8 +1797,6 @@ body {
     }
 
     .promotion-banner-component {
-        background-color: var(--bs-dark-green);
-
         h2 {
             font-size: 30px;
         }
@@ -1840,7 +1838,6 @@ body {
         }
 
         .quicklinks-container{
-
             .menu {
                 display: flex;
                 flex-wrap: wrap;
@@ -1879,6 +1876,30 @@ body {
         width: 90%;
     }
 
+    .big-hero-component {
+        .big-hero-content-container {
+
+            h1 {
+                font-size: 36px;
+            }
+
+            p {
+                width: 95%;
+            }
+        }
+
+        .big-hero-buttons-container {
+            .btn-primary {
+                font-size: 15px;
+                padding: 10px 15px;
+            }
+
+            .btn-link {
+                font-size: 16px;
+            }
+        }
+    }
+
     .shop-introduction-component {
         .shop-introduction-container {
             width: 95%;
@@ -1895,8 +1916,7 @@ body {
     }
 
     .address-contact-component {
-        .address-contact-text-container {
-            
+        .address-contact-text-container {           
             p {
                 font-size: 16px;
             }
@@ -1907,6 +1927,31 @@ body {
 @media (max-width: 450px) {
     .header .image-container {
         width: 100%;
+    }
+
+    .big-hero-component {
+        .big-hero-content-container {
+
+            h1 {
+                font-size: 28px;
+            }
+
+            p {
+                font-size: 16px;
+                width: 100%;
+            }
+        }
+
+        .big-hero-buttons-container {
+            .btn-primary {
+                font-size: 13px;
+                padding: 10px 15px;
+            }
+
+            .btn-link {
+                font-size: 14px;
+            }
+        }
     }
 
     .shop-introduction-component {
@@ -1922,8 +1967,6 @@ body {
     }
 
     .promotion-banner-component {
-        background-color: var(--bs-dark-green);
-
         h2 {
             font-size: 23px;
         }
